SAM-2087 replace use of single-precision floating point numbers with doubles
git-svn-id: https://source.sakaiproject.org/svn/sam/trunk@121258 66ffb92e-73f9-0310-93c1-f5514f145a0a